--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <title>CharitesJS</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
-  <body></body>
+  <body>
+    <script src="dist/charites.js"></script>
+  </body>
 </html>
