--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
+    <div id="js-wrapper"></div>
     <script src="dist/charites.js"></script>
   </body>
 </html>
