working on own/foreign contexts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="js-wrapper"></div>
+    <canvas style="border:1px solid deeppink;" id="js-canvas"></canvas>
     <script src="dist/charites.js"></script>
   </body>
 </html>
