add byte + setProgress

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <svg viewBox="0 0 200 200" width="200" height="200" id="js-svg"></svg>
+    <div id="js-div"></div>
     <script src="dist/mojs.js"></script>
   </body>
 </html>
