triangle shape fix

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>mojs</title>
+    <title>mo·js</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
