add isShowInit and isShowEnd options to transit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
-    <div id="js-div"></div>
+    <div class="div-wrapper">
+      <div id="js-div" class="div"></div>
+    </div>
     <script src="dist/mojs.js"></script>
   </body>
 </html>
