add h.rand for floats, perf optimizations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <div class="div-wrapper">
       <div id="js-div" class="div"></div>
     </div>
+    <p>aaa
+      <p>aaa
+        <p>aaa
+          <p>aaa
+            <p>aaa
+              <p>aaa</p>
+            </p>
+          </p>
+        </p>
+        <p>aaa</p>
+      </p>
+    </p>
+    <p>aaa
+      <p>aaa
+        <p>aaa
+          <p>aaa
+            <p>aaa</p>
+          </p>
+        </p>
+      </p>
+    </p>
     <script src="dist/mojs.js"></script>
   </body>
 </html>
