working on bubble trick

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </div>
       </div>
     </div>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.1/TweenMax.min.js"></script>
     <script src="dist/mojs.js"></script>
   </body>
 </html>
