tween: add setProgress method

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, max-scale=1">
   </head>
   <body>
+    <input type="range" min="0" max="1000" value="0" id="js-slider">
     <script src="dist/mojs.js"></script>
   </body>
 </html>
