--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>mo · js</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <meta name="viewport" content="width=device-width, max-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
   <body>
     <input type="range" min="0" max="1000" value="0" id="js-slider">
