--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <input type="range" min="0" max="100000" value="0" id="js-slider">
-    <script src="dist/mojs.js"></script>
+    <script src="dist/mo.js"></script>
   </body>
 </html>
