--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
   <body>
-    <script src="dist/mo.js"></script>
+    <script src="build/mo.js"></script>
   </body>
 </html>
