--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
   <body>
+    <input type="range" min="0" max="100000" value="0" id="js-slider">
     <script src="build/mo.js"></script>
   </body>
 </html>
