--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <input type="range" min="0" max="100000" value="0" id="js-slider">
+    <svg width="500px" height="500px">
+      <path stroke="white" fill="none" stroke-width="2" id="js-path"></path>
+    </svg>
     <script src="build/mo.js"></script>
   </body>
 </html>
