transit: working on moving to thenable

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <button id="js-play">play</button>
-    <button id="js-reverse">reverse</button>
+    <button id="js-play-backward">play-backward</button>
     <button id="js-pause">pause</button>
     <button id="js-stop">stop</button>
 
