--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <button id="js-stop">stop</button>
     <style>
       div {
-        outline: 1px solid cyan;
+        outline1: 1px solid cyan;
       }
     </style>
+
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mo-js/0.174.4/mo.min.js"></script> -->
 
     <input type="range" min="0" max="1000" value="0" style="width: 500px; margin-top: 200px; margin-left: 200px;" id="js-range-slider">
     <script src="build/mo.js"></script>
