tween: fix multiple callbacks override issue

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       }
     </style>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mo-js/0.174.4/mo.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mo-js/0.174.4/mo.min.js"></script>
 
     <input type="range" min="0" max="1000" value="0" style="width: 500px; margin-top: 200px; margin-left: 200px;" id="js-range-slider">
     <script src="build/mo.js"></script>
