--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <button id="js-stop">stop</button>
     <style>
       div {
-        outline1: 1px solid cyan;
+        outline: 1px solid cyan;
       }
     </style>
-
-    <div id="js-div"></div>
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mo-js/0.174.4/mo.min.js"></script> -->
 
