burst: the new soft implementation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button id="js-stop">stop</button>
     <style>
       div {
-        outline: 1px solid cyan;
+        outline1: 1px solid cyan;
       }
     </style>
 
