--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     
     <input type="range" min="0" max="1000" value="0" style="width: 500px; margin-top: 200px; margin-left: 200px;" id="js-range-slider">
 
-    <script src="https://cdn.jsdelivr.net/lodash/4.9.0/lodash.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/platform.js/1.3.1/platform.js"></script>
-    <script src="https://cdn.jsdelivr.net/benchmarkjs/2.1.0/benchmark.js"></script>
+    <script src="vendor/lodash.min.js"></script>
+    <script src="vendor/platform.js"></script>
+    <script src="vendor/benchmark.js"></script>
 
     <script src="build/mo.js"></script>
   </body>
