tween: add `setSpeed` method

--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
     <button id="js-play-backward">play-backward</button>
     <button id="js-pause">pause</button>
     <button id="js-stop">stop</button>
+    <hr>
+    <button id="js-x1">x.1</button>
+    <button id="js-x25">x.25</button>
+    <button id="js-x50">x.5</button>
+    <button id="js-x100">x1</button>
+    <button id="js-x250">x2.5</button>
+    <button id="js-x500">x5</button>
+    <button id="js-x1000">x10</button>
+    <hr>
     <style>
       div {
-        outline: 1px solid cyan;
+        outline1: 1px solid cyan;
         /*display: block !important;*/
       }
       .el {
