--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <button id="js-play-backward">play-backward</button>
     <button id="js-pause">pause</button>
     <button id="js-stop">stop</button>
+    <button id="js-reset">reset</button>
     <hr>
     <button id="js-x1">x.1</button>
     <button id="js-x25">x.25</button>
