timeline: reset method now resets all children

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button id="js-pause">pause</button>
     <button id="js-stop">stop</button>
     <button id="js-reset">reset</button>
+    <button id="js-set0">set0</button>
     <hr>
     <button id="js-x1">x.1</button>
     <button id="js-x25">x.25</button>
