transit: add `wrapperEl` for `then` chain

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <button id="js-x500">x5</button>
     <button id="js-x1000">x10</button>
     <hr>
+    
+    <div id="js-parent" class="parent"></div>
+
     <style>
       div {
         outline1: 1px solid cyan;
@@ -28,6 +31,13 @@
       }
       .el {
         background: cyan;
+      }
+
+      .parent {
+        background: #777;
+        width: 200px;
+        height: 200px;
+        position: relative;
       }
     </style>
 
