transit: add scaleX/scaleY options

--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
   </head>
   <body>
     
-    <div id="js-parent" class="parent"></div>
-
     <style>
+      body, html {
+        height: 100%;
+      }
       .el {
         background:   cyan;
         position:     absolute;
-      }
-
-      .parent {
-        background: #777;
-        width: 200px;
-        height: 200px;
-        position: relative;
       }
     </style>
 
@@ -29,24 +23,8 @@
     <script src="vendor/platform.js"></script>
     <script src="vendor/benchmark.js"></script>
 
-    <script src="build/mo.js"></script>
     <script src="node_modules/mojs-player/build/mojs-player.js"></script>
-
-    <script>
-      // let el = document.querySelector( '#js-el' );
-      // let tw = new mojs.Tween({
-      //   duration:  4000,
-      //   onUpdate (p) {
-      //     el.style.transform = `translateX(${ 1000 * p }px)`;
-      //   }
-      // });
-      // let mojsPlayer = new MojsPlayer({
-      //   add:       tw,
-      //   isPlaying: true,
-      //   progress:  .5,
-      //   speed:     5,
-      // });
-    </script>
+    <script src="build/mo.js"></script>
 
   </body>
 </html>
