transit: remove bit ratio, add `origin` option

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       body, html {
         height: 100%;
       }
+      /*div {
+        outline: 1px solid red;
+      }*/
       .el {
         background:   cyan;
         position:     absolute;
