shape: add size recalculation on `then`

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       body, html {
         height: 100%;
       }
-      /*div {
+      div {
         outline: 1px solid red;
-      }*/
+      }
       .el {
         background:   cyan;
         position:     absolute;
