--- a/test.html
+++ b/test.html
@@ -38,46 +38,48 @@
     <script src="build/mo.js"></script>
 
     <button id="js-play">play</button>
-    <button id="js-reverse">reverse</button>
+    <!-- <button id="js-reverse">reverse</button> -->
     <button id="js-pause">pause</button>
-    <button id="js-stop">stop</button>
+    <!-- <button id="js-stop">stop</button> -->
 
     <script>
-      // var el = document.querySelector('#js-el');
-      // var playBtn = document.querySelector('#js-play');
+      var el = document.querySelector('#js-el');
+      var playBtn = document.querySelector('#js-play');
+      var pauseBtn = document.querySelector('#js-pause');
       // var reverseBtn = document.querySelector('#js-reverse');
-      //
-      // var tween = new mojs.Tween({
-      //   // isReverse: true,
-      //   repeat: 1,
-      //   duration: 2000,
-      //   delay: 500,
-      //   onUpdate(p) {
-      //     console.log('update', p);
-      //   },
-      //   onStart() {
-      //     console.log( 'start' );
-      //   },
-      //   onRepeatStart() {
-      //     console.log( 'repeatStart' );
-      //   },
-      //   onRepeatComplete() {
-      //     console.log( 'repeatComplete' );
-      //   },
-      //   onComplete() {
-      //     console.log( 'complete' );
-      //   }
-      // });
-      //
-      // playBtn.addEventListener('click', function() {
-      //   console.log('::: play click');
-      //   tween.play();
-      // });
-      //
-      // reverseBtn.addEventListener('click', function() {
-      //   console.log('::: reverse click');
-      //   tween.reverse();
-      // });
+      var prevP = 0;
+      const tween = new mojs.Tween({
+        delay: 1000,
+        duration: 2000,
+        isReverse: true,
+        // repeat: 5,
+        onUpdate(p) {
+          console.log('[update]', p, p - prevP);
+          prevP = p;
+        },
+        onStart() {
+          console.log('[start]');
+        },
+        onRepeatStart() {
+          console.log('[repeat start]');
+        },
+        onRepeatComplete() {
+          console.log('[repeat complete]');
+        },
+        onComplete() {
+          console.log('[complete]');
+        }
+      });
+
+      playBtn.addEventListener('click', function() {
+        console.log('::: play click', tween._elapsed);
+        tween.play();
+      });
+
+      pauseBtn.addEventListener('click', function() {
+        console.log('::: pause click', tween._elapsed);
+        tween.pause();
+      });
     </script>
 
   </body>
