[stagger-property]: initial commit

--- a/test.html
+++ b/test.html
@@ -50,9 +50,10 @@
 
       var prevP = 0;
       const tween = new mojs.Tween({
-        delay: 5000,
-        duration: 1000,
-        speed: 2,
+        delay: 50,
+        duration: 200,
+        // speed: 2,
+        // isPeriodReverse: [true, false],
         // isReverse: true,
         repeat: 2,
         onUpdate(p) {
