[tween]: add `onChimeIn` and `onChimeOut` callbacks

--- a/test.html
+++ b/test.html
@@ -72,6 +72,9 @@
         },
         onComplete() {
           console.log('[complete]');
+        },
+        onChimeIn() {
+          console.log('[chime in]');
         }
       });
 
